changed build.xml to package native, locale and templates into the distribution files

--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -14,6 +14,7 @@ Button.edit=Editovat
 Button.register=Registrovat
 Button.rename=Přejmenovat
 Button.chooseplayer=Vyber přehrávač
+Button.update=Obnov
 
 menuitem.cut=Stříh
 menuitem.copy=Kopíruj
@@ -115,7 +116,7 @@ movie.scrape.toolowscore=Kriterium shody je příliš nízké (<{}) tento výsle
 movie.remove=Smaž označené film(y) (DB)
 movie.delete=Vymaž vybraný film(y) (DB + soubor)
 movie.delete.hint=Vymaž vybraný film(y) z tinyMediaManageru DB a z vašich zdrojů dat
-movie.delete.desc=Smazat vybraný film(y) z tinyMediaManageru DB a ze zdrojů dat?\nSoubory budou přechodně umístěny do adresáře deletedByTMM uvnitř zdrojů dat a vymazány po ukončení tinyMediaManageru.
+movie.delete.desc=Smazat vybraný film(y) z tinyMediaManageru DB a ze zdrojů dat?\nSoubory budou přechodně umístěny do adresáře deletedByTMM uvnitř zdrojů dat a vymazány po ukončení tinyMediaManageru (jestliže je aktivováno v nastavení)
 movie.rename=Přejmenuj/smaž označené filmy
 movie.renamepreview=Přejmenuj/smaž označené filmy - testovací běh
 movie.renamepreview.hint=<html>Ukaž náhled filmů k přejmenování<br />toto rozšíření je dostupné pouze pro dárce</html>
@@ -187,6 +188,8 @@ scraper.artwork=Stahovač artworku
 scraper.trailer=Stahovač traileru
 
 image.choose=Vyber obrázek
+image.inserturl=Vlož zde url nebo obrázek
+image.downloadimage=Stáhni obrázek
 image.choose.file=Vyber soubor
 image.choose.fanart=Vyber fanart
 image.choose.poster=Vyber plakát
@@ -239,7 +242,7 @@ BugReport=Nahlaš chybu
 BugReport.name=Jméno
 BugReport.email=Email
 BugReport.email.description=Prosím zadejte platný email. Možná vás budeme kontaktovat pro další informace.
-BugReport.description=Popis
+BugReport.description=Popis (v angličtině nebo němčině\!)
 BugReport.description.empty=Není poskytnutý žádný popis
 BugReport.attachments=Přílohy
 BugReport.logs=Logy
@@ -250,7 +253,7 @@ BugReport.send.ok=Chybový report odeslán
 Feedback=Pošli zpětnou vazbu
 Feedback.name=Jméno (volitelně)
 Feedback.email=Email (volitelně)
-Feedback.message=Zpětná vazba
+Feedback.message=Zpětná vazba  (v angličtině nebo němčině\!)
 Feedback.message.empty=Zpětná vazba je prázdná
 Feedback.send.error=Chyba při posílání zpětné vazby
 Feedback.send.ok=Zpětná vazba odeslána
@@ -294,6 +297,10 @@ Settings.trakt.clearmovies=Odstraň filmy z Trakt.tv
 Settings.trakt.clearmovies.hint=POZOR\: Dojde k vymazání všech filmů a jejich stavů shlédnutí z vašeho profilu na Trakt.tv. Pokračovat?
 Settings.trakt.cleartvshows=Odstraň seriály z Trakt.tv
 Settings.trakt.cleartvshows.hint=POZOR\: Dojde k vymazání všech seriálů a jejich stavů shlédnutí z vašeho profilu na Trakt.tv. Pokračovat?
+Settings.misc=Ostatní nastavení
+Settings.memoryborder=Nastavení paměti
+Settings.memory=Max. paměť
+Settings.memory.hint=Zyyšte tuto hodnotu při výskytu OutOfMemoryError (Java heap space) a nebo v případě, že máte rozsáhlou databázi a tinyMediaManager běží pomalu.\nUpozornění\: požadované množství paměti musí být volné již při startu tinyMediaManageru. Defaultně  512MB\nPo změně hodnoty je třeba restarovat tinyMediaManager, aby se změna projevila.
 
 # image settings
 Settings.poster=Plakát a fanart
@@ -326,7 +333,8 @@ Settings.preferredLanguage=Preferovaný jazyk
 Settings.certificationCountry=Země pro certifikaci
 Settings.scraperTreshold=Práh pro shodnost hledání
 Settings.scraperTreshold.hint=Toto ukazuje podobnost výsledků hledání  se zadaným dotazem\nAutomatický stahovač bude ignorovat výsledky hledání, které nedosáhnou na limit.\nPOZOR\: pokud nastavíš práh příliš nízko, můžeš dostat chybné výsledky hledání - falešné pozititní \!\n\n1 \= 100% to samé\n0.75 \= přednastavené\n0 \= jsou úplně odlišné
-Settings.default.autoscrape=stahuj obrázky automaticky (bez výběru)
+Settings.default.autoscrape=Automaticky skrapuj obrázky (bez výběru)
+Settings.default.autoscrape.language=Upřednostni řeč před rozlišením při výběru obrázků
 Settings.automaticscraper=Automatický scraper
 Settings.scraperfallback=Návrat zpátky do dalších scraperu v případě nenalezéno výsledku.
 
@@ -350,6 +358,8 @@ Settings.sorting.info=Vyber prefixy ovlivňující třídění seznamu\nPříkla
 Settings.renamer=Přejmenovávač
 Settings.renamer.folder=Jméno složky
 Settings.renamer.file=Jméno souboru
+Settings.renamer.token=Popis tokenu
+Settings.renamer.value=Hodnota z příkladu
 Settings.renamer.asciireplacement=Nahraď non ASCII znaky jejich ASCII ekvivalenty
 Settings.renamer.asciireplacement.hint=Například\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Možnosti vyčištění
@@ -367,25 +377,55 @@ Settings.trailer.preferred=Použij preferované nastavení pro trailer
 Settings.trailer.source=Zdroju traileru
 Settings.trailer.quality=Kvalita traileru
 
-Settings.movie.renamer.info=Možné vzory\:\n$T \= Název\n$O \= Původní název\n$1 \= první písmeno názvu\n$E \= Název pro třídění\n$2 \= První písmeno názvu pro třídění\n$Y \= Rok\n$M \= Název sbírky (pro třídění)\n$N \= Název sbírky\n$I \= IMDB number\n$C \= Certifikace\n$R \= Rozlišení videa\n$A \= audio codec + kanály\n$V \= video codec + formát\n$F \= video formát\n$S \= medium zdroje (DVD etc)\n$3 \= 3D tag (3D SBS/TAB)\n\n{} \= volitelné nahrazení\ntzn\: {Year $Y} -> "Year 2013" jestliže $Y není prázdný\nJestliže je $Y prázdný (nebo není zádné $x nahrazení uvnitř)\ncelý tag je prázdný
+Settings.movie.renamer.title=Vzor pojmenování a možnosti
+Settings.movie.renamer.optional={} \= volitelné nahrazení\ntzn\: {Rok $Y} -> "Rok 2013" jestliže $Y není prázdný\njestliže je  $Y prázdný  (nebo žádné  $x nahrazení uvnitř) celý tag je prázdný
 Settings.movie.renamer.example=Vyber vzor pro přejmenování složek a souboru.\nJestliže jsou pole prázdná, přejmenová bude přeskočeno\!
 Settings.movie.renamer.nomovie=pro příklad je potřeba alespoň jeden film
 Settings.movie.renamer.spacesubstitution=Nahraď mezery
 
-Settings.tvshow.renamer.info=Zbývá dodělat
-Settings.tvshow.renamer.example=Zbývá dodělat
+Settings.movie.renamer.$T=Název
+Settings.movie.renamer.$O=Originální název
+Settings.movie.renamer.$1=První písmeno názvu
+Settings.movie.renamer.$E=Název pro třídění
+Settings.movie.renamer.$2=První písmeno názvu pro třídění
+Settings.movie.renamer.$Y=Rok
+Settings.movie.renamer.$M=Název sady (pro třídění)
+Settings.movie.renamer.$N=Název sady
+Settings.movie.renamer.$I=IMDB číslo
+Settings.movie.renamer.$C=Certifikace
+Settings.movie.renamer.$G=První žánr
+Settings.movie.renamer.$L=Jazyk
+Settings.movie.renamer.$R=Rozlišení videa
+Settings.movie.renamer.$A=audio kodek + kanály
+Settings.movie.renamer.$V=video kodek + formát
+Settings.movie.renamer.$F=video formát
+Settings.movie.renamer.$S=zdrojové medium (DVD etc)
+Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+Settings.tvshow.renamer.title=Vzory možnosti pro přejmenovávač
+
+Settings.tvshow.renamer.$N=Jméno seriálu
+Settings.tvshow.renamer.$Y=Rok
+Settings.tvshow.renamer.$T=Název epizody
+Settings.tvshow.renamer.$F=video formát
+Settings.tvshow.renamer.$1=Číslo sezóny
+Settings.tvshow.renamer.$2=číslo sezony s alespoň 2 číslicemi
+Settings.tvshow.renamer.$E=Číslo epizody
+Settings.tvshow.renamer.$R=Rozlišení videa
+Settings.tvshow.renamer.$A=audio kodek + kanály
+Settings.tvshow.renamer.$V=video kodek + formát
+Settings.tvshow.renamer.$F=video formát
+
 
 # tv show settings
 Settings.tvshowdatasource=Zdroje dat pro seriály
 Settings.tvshowdatasource.folderchooser=přidej zdroj dat pro seriály
 Settings.tvshowdatasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny seriály a epizody v této cestě budou odstraněny z TMM databáze. Pokračovat ?
-Settings.tvshowseasontofilename=přidej sezónu do názvu souboru
-Settings.tvshowtofilename=přidej název seriálu do názvu souboru
-Settings.tvshowepisodetofilename=přidej název epizody do názvu souboru
+Settings.dvdorder=Importované epizody jsou v seřazeny podle DVD
+
+Settings.tvshowfoldername=Jméno složky pro seriály
 Settings.tvshowseasonfoldername=název složky sezóny
-Settings.tvshowseasonhint=$1 - Pořadí sezóny\n$2 - Pořadí sezóny na alespoň 2 číslice\nMužete vynechat vytvoření adresáře pro sezónu nevyplněním tohoto pole.\nAle při použití, musíte zkontrolovat \\"přidej sezónu do názvu souboru\\"
-Settings.separator=Oddělovač
-Settings.separator.hint=Oddělovač mezi názvem číslem sezóny/epizody
+Settings.tvshowfilename=Jméno souboru epizody
 Settings.tvshowspacereplacement.hint=Nahraď mezery v názvu těmito znaky
 Settings.tvshow.certifactioncountry.hint=Nápověda\: v současně době nepodporuje žádný scraper certifikaci více států.\nThe TV Database vždy vrací US certifikaci.\nAniDB neposkytuje certifikaci.
 
@@ -420,8 +460,12 @@ tvshow.synctrakt=Synchronizuj sbírku seriálů s Trakt.tv
 tvshow.synctrakt.desc=Synchronizuj sbírku seriálů s Trakt.tv
 tvshow.synctraktwatched=Synchronizuj příznak shlédnutí s Trakt.tv
 tvshow.synctraktwatched.desc=Synchronizuj příznak shlédnutí s Trakt.tv
+tvshow.changetodvdorder=Změň řazení vybraných epizod(y) na řazení dle DVD
+tvshow.changefromdvdorder=Změň řazení vybraných epizod(y) na řazení dle premiery
+tvshow.changeorder.desc=Toto by mělo být použito po importu, před skrapováním
 
 tvshowepisode.scrape=Stáhni data pro epizodu
+tvshowepisode.scrape.withoutartwork=Stáhni data pro epizodu (bez náhledů)
 tvshowepisode.clone=Klonuj epizodu
 tvshowepisode.remove=Odstraň epizodu
 tvshowepisode.rewritenfo=Přepiš NFO pro vybrané epizody
@@ -438,6 +482,7 @@ trakt.clear.movies=Mažu Trakt.tv film(y)
 trakt.clear.tvshows=Mažu Trakt.tv seriál(y)
 
 # metatags
+metatag.3d=3D
 metatag.actors=Herci
 metatag.aired=Vysíláno
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=Přidáno dne
 metatag.details=Detaily
 metatag.details2=Detaily 2
 metatag.director=Režisér
+metatag.dvdepisode=DVD epizoda
+metatag.dvdorder=pořadí dle DVD
+metatag.dvdseason=DVD sezóna
 metatag.episode=Epizoda
 metatag.episodes=Epizody
 metatag.external=vnější
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Video rozšíření
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Titulky
 mediafiletype.nfo=NFO
+mediafiletype.text=Text
 mediafiletype.poster=Plakát
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = Televizní film
 Genres.THRILLER = Thriller
 Genres.WAR = Válečný
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />Nejrozsáhlejší filmová databáze udržovaná komunitou zadarmo. Poskytuje metadata a artworky<br />v mnoha různých jazycích. Je to jasná volba pro anglicky nemluvící uživatele<br /><br />Dostupné v několika jazycích</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Nejpoužívanější filmová databáze na světě..<br />Neobsahuje informace  děj/název/tagline přeložené do dalších jazyků. Můžete si vybrat stáhnutí těchto informací z TMDB<br /><br />Dostupno v několika jazycích.</html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Německá filmová databáze provozovaná komunitou<br /><br />Pouze v němčině</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Německá filmová databáze.<br /><br />Pouze v němčině</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Holandská filmová databáze.<br /><br />Pouze v holandštině</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Americká filmová databáze.<br />Neposkytuje popis děje pro starší tituly přez API.<br /><br />Dostupno pouze v angličtině</html>
