--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -14,6 +14,7 @@ Button.edit=Bearbeiten
 Button.register=Registrieren
 Button.rename=Umbenennen
 Button.chooseplayer=Wähle Videoplayer
+Button.update=Update
 
 menuitem.cut=Ausschneiden
 menuitem.copy=Kopieren
@@ -24,8 +25,8 @@ tmm.movies=Filme
 tmm.movie=Film
 tmm.moviesets=Film Sets
 tmm.movieset=Filmset
-tmm.tvshows=TV Shows
-tmm.tvshow=TV Show
+tmm.tvshows=TV Serien
+tmm.tvshow=TV Serie
 tmm.settings=Einstellungen
 
 # menu actions
@@ -61,7 +62,7 @@ tmm.trailer=Trailer
 tmm.subtitles=Untertitel
 tmm.update.title=Überprüfe auf neue Version
 tmm.update.message=EIne neue Version wurde gefunden.\nMöchtest Du sie installieren?
-tmm.registeredto=Registirert für\:
+tmm.registeredto=Registriert für\:
 tmm.registerdonator=Registriere Dich als Spender
 tmm.registerdonator.error=Es gab ein Poblem bei der Registrierung Deiner Version.\nBis Deine Spende in unserem System aufscheint, kann es uA ein paar Minuten dauern. Bitte probiere es später noch einmal.
 tmm.registerdonator.success=Danke für die Registrierung als Spender. Bitte TMM neu starten.
@@ -115,7 +116,7 @@ movie.scrape.toolowscore=Suchergebnisbewertung war zu niedrig (<{}), nehme Ergeb
 movie.remove=Ausgewählte Filme entfernen (DB)
 movie.delete=Ausgewählte Filme entfernen (DB + Datei)
 movie.delete.hint=Ausgewählte Filme aus der tinyMediaManager Datenbank und von Deinem Dateisystem(\!) entfernen
-movie.delete.desc=Ausgewählte Filme aus der DB und vom Filesystem löschen? Die Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
+movie.delete.desc=Ausgewählte Filme aus der DB und vom Filesystem löschen?\nDie Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben,\nund beim Beenden gelöscht (wenn aktiviert in Einstellungen)
 movie.rename=Umbenennen / Cleanup ausgewählter Filme
 movie.renamepreview=Umbenennen / Cleanup ausgewählter Filme - Vorschau
 movie.renamepreview.hint=<html>Zeigt eine Vorschau, welche Filme noch umbenannt werden sollten<br />Diese Funktion ist unseren Spendern vorbehalten</html>
@@ -187,6 +188,8 @@ scraper.artwork=Artwork Scraper
 scraper.trailer=Film Trailer Scraper
 
 image.choose=Wähle ein Bild
+image.inserturl=Url von Bild hier einfügen
+image.downloadimage=Bild herunterladen
 image.choose.file=Wähle eine Datei
 image.choose.fanart=Wähle Fanart
 image.choose.poster=Wähle Poster
@@ -239,18 +242,18 @@ BugReport=Fehler melden
 BugReport.name=Name
 BugReport.email=eMail
 BugReport.email.description=Bitte gib eine gültige eMail an. Möglicherweise haben wir noch Rückfragen.
-BugReport.description=Beschreibung
+BugReport.description=Beschreibung (in Englisch oder Deutsch)
 BugReport.description.empty=Keine Beschreibung eingegeben
 BugReport.attachments=Anhang
 BugReport.logs=Log Files
 BugReport.send=Sende Fehlerbericht
-BugReport.send.error=Fehler beim Senden des Fehlerberichts \:p
+BugReport.send.error=Fehler beim Senden des Fehlerberichts
 BugReport.send.ok=Fehlerbericht gesendet - Danke\!
 
 Feedback=Feedback geben
 Feedback.name=Name (optional)
 Feedback.email=Email (optional)
-Feedback.message=Feedback
+Feedback.message=Feedback (in Englisch oder Deutsch)
 Feedback.message.empty=Feedback ist leer
 Feedback.send.error=Fehler beim Senden vom Feedback
 Feedback.send.ok=Feedback gesendet - Danke\!
@@ -259,7 +262,7 @@ Feedback.send.ok=Feedback gesendet - Danke\!
 Settings.movies=Filme
 Settings.scraper=Scraper
 Settings.images=Bilder
-Settings.tvshow=TV Shows
+Settings.tvshow=TV Serien
 Settings.general=Allgemein
 Settings.externaldevices=Externe Geräte
 Settings.externalservices=Externe Dienste
@@ -283,7 +286,7 @@ Settings.language=UI Sprache
 Settings.languagehint=Die Sprache wird bei beim nächsten Start geändert
 Settings.shownotifications=zeige Benachrichtigungen
 Settings.mediaplayer.hint=Wähle einen Videoplayer, welcher für die Wiedergabe verwendet werden soll.\n(Wenn keiner angegeben, wird der Standardplayer verwendet)
-Settings.fonts.hint=DIe Standardschrift in tinyMediaManager ist "Dialog" Größe 12.\nÄnderungen an der Schriftart/größe können das Design leicht verschieben (die Funktionalität wird aber nicht beeinträchtigt)
+Settings.fonts.hint=Die Standardschrift in tinyMediaManager ist "Dialog" Größe 12.\nÄnderungen an der Schriftart/größe können das Design leicht verschieben (die Funktionalität wird aber nicht beeinträchtigt)
 Settings.fontfamily=Schriftart
 Settings.fontsize=Schriftgröße
 Settings.fontchangehint=Die Schriftart wird beim nächsten Start geändert
@@ -292,8 +295,12 @@ Settings.deletetrash=temporäres Backup-Verzeichnis beim Beenden löschen
 Settings.trakt=Automatisch mit Trakt.tv synchronisieren
 Settings.trakt.clearmovies=Entferne alle Filme aus Trakt.tv
 Settings.trakt.clearmovies.hint=ACHTUNG\: Es werden alle Filme und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
-Settings.trakt.cleartvshows=Entferne alle TvShows aus Trakt.tv
-Settings.trakt.cleartvshows.hint=ACHTUNG\: Es werden alle TvShows und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
+Settings.trakt.cleartvshows=Entferne alle TV Serien aus Trakt.tv
+Settings.trakt.cleartvshows.hint=ACHTUNG\: Es werden alle TV Serien und 'gesehen' Status aus Deinem online Trakt.tv Profil entfernt. Weitermachen?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Poster und Fanart
@@ -327,6 +334,7 @@ Settings.certificationCountry=lokalisierte Altersbeschränkung
 Settings.scraperTreshold=Such-Grenzwert
 Settings.scraperTreshold.hint=Das ist der Wert, wie gut der Suchbegriff mit dem Ergebnis übereinstimmt.\n'Automtisch Scrapen' ignoriert Ergebnisse unter diesem Wert.\nACHTUNG\: ist der Wert zu niedrig, können falsche Ergebnisse genommen werden\!\n\n1 \= 100% gleich\n0.75 \= Standardwert\n0 \= komplett unterschiedlich
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
+Settings.default.autoscrape.language=Bevorzuge Sprache vor Größe bei der Bilderauswahl
 Settings.automaticscraper=Automatisch scrapen
 Settings.scraperfallback=Automatische Suche mit anderen Scrapern wenn kein Ergebnis gefunden
 
@@ -350,6 +358,8 @@ Settings.sorting.info=Präfix auswählen, welcher die Sortierung der Liste beein
 Settings.renamer=Film Dateien umbenennen
 Settings.renamer.folder=Verzeichnis
 Settings.renamer.file=Dateiname
+Settings.renamer.token=Beschreibung des Kürzels
+Settings.renamer.value=Wert aus dem Beispiel
 Settings.renamer.asciireplacement=Ersetze Nicht-ASCII Zeichen mit dem Basis ASCII Pendant
 Settings.renamer.asciireplacement.hint=Beispiel\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Cleanup Optionen
@@ -367,61 +377,95 @@ Settings.trailer.preferred=Nimm bevorzugte Trailer Einstellungen
 Settings.trailer.source=Trailer Quelle
 Settings.trailer.quality=Trailer Qualität
 
-Settings.movie.renamer.info=Verfügbare Werte\: \n$T \= Titel\n$O \= Original Titel \n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$C \= Altersbeschränkung\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format\n$F \= Video Format\n$S \= Medien Source (DVD, BD, ...)\n$3 \= 3D Kennung (3D SBS/TAB)\n\n{} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen) dann ist der komplette {} Tag leer.
+Settings.movie.renamer.title=Vorlage zur Umbenennung und Optionen
+Settings.movie.renamer.optional={} \= optionales Ersetzen\nzB\: {Jahr $Y} -> "Jahr 2013" wenn Y$ nicht leer ist.\nWenn Y$ leer ist (oder keine $x Variable dazwischen) dann ist der komplette {} Tag leer.
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
 Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
 
-Settings.tvshow.renamer.info=ToDo
-Settings.tvshow.renamer.example=ToDo
+Settings.movie.renamer.$T=Titel
+Settings.movie.renamer.$O=Original Titel
+Settings.movie.renamer.$1=Erster Buchstabe vom Titel
+Settings.movie.renamer.$E=Sortierungstitel
+Settings.movie.renamer.$2=Erster Buchstabe vom Sortierungstitel
+Settings.movie.renamer.$Y=Jahr
+Settings.movie.renamer.$M=Filmset Name (Suchtitel)
+Settings.movie.renamer.$N=Filmset Name
+Settings.movie.renamer.$I=IMDB Nummer
+Settings.movie.renamer.$C=Altersbeschränkung
+# Settings.movie.renamer.$G=First genre
+Settings.movie.renamer.$L=Sprache
+Settings.movie.renamer.$R=Video Auflösung
+Settings.movie.renamer.$A=Audio Codec + Kanäle
+Settings.movie.renamer.$V=Video Codec + Format
+Settings.movie.renamer.$F=Video Format
+Settings.movie.renamer.$S=Medienherkunft (DVD etc)
+Settings.movie.renamer.$3=3D Tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+Settings.tvshow.renamer.$N=TV Serien name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
-Settings.tvshowdatasource=TV Show Ordner
-Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
-Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der TMM Datenbank entfernt. Weitermachen?
-Settings.tvshowseasontofilename=Saisonnummer dem Dateinamen hinzufügen
-Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
-Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
-Settings.tvshowseasonfoldername=Saison Ordnername
-Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit mindestens 2 Stellen\nDu kannst das Erstellen des Saison Ordners verhindern, wenn dieses Feld leer bleibt (nicht empfohlen)\nDu musst allerdings *zwingend* "Saisonnummer dem Dateinamen hinzufügen" aktivieren\!
-Settings.separator=Trennzeichen
-Settings.separator.hint=Trennzeichen zwischen Saison und Episode Nummer
+Settings.tvshowdatasource=TV Serien Ordner
+Settings.tvshowdatasource.folderchooser=neuen TV Serien Ordner hinzufügen
+Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Serien und Episoden in diesem Pfad aus der TMM Datenbank entfernt. Weitermachen?
+Settings.dvdorder=Importierte Episoden sind in DVD Reihenfolge
+
+Settings.tvshowfoldername=TV Serien Ordnername
+Settings.tvshowseasonfoldername=Staffel Ordnername
+# Settings.tvshowfilename=Episode file name
 Settings.tvshowspacereplacement.hint=Leerzeichen im Titel ersetzen durch
 Settings.tvshow.certifactioncountry.hint=Hinweis\: Momentan unterstützt kein Scraper anderssprachige Altersbeschränkungen.\nTVDB führt nur US Altersbeschränkungen,\nund AniDB gar keine.
 
 # tv shows
-tvshow.scraping=TvShow scrapen
+tvshow.scraping=TV Serie scrapen
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
-tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Shows
-tvshow.scrape.selected.force=Suchen und Scrapen von ausgewählten TV Shows - automatisch besten Treffer nehmen
-tvshow.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten TV Shows - nimm besten Treffer
-tvshow.scrape.nomatchfound=Keine entsprechende TV show bei der Suche gefunden
-tvshow.edit=Ausgewählte TV Show(s)/Episode(s) bearbeiten
-tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Shows ab
-tvshow.remove=Ausgewählte TV Show(s) / Episoden entfernen
-tvshow.delete=Ausgewählte TV Show(s) / Episoden löschen (DB)
-tvshow.delete.hint=Ausgewählte TV Show(s) / Episoden löschen (DB + Dateien)
-tvshow.delete.desc=Ausgewählte TV Shows aus der DB und vom Filesystem löschen?\nDie Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
+tvshow.scrape.selected=Suchen & Scrapen aller ausgewählten TV Serien
+tvshow.scrape.selected.force=Suchen und Scrapen von ausgewählten TV Serien - automatisch besten Treffer nehmen
+tvshow.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten TV Serien - nimm besten Treffer
+tvshow.scrape.nomatchfound=Keine entsprechende TV Serie bei der Suche gefunden
+tvshow.edit=Ausgewählte TV Serie(n)/Episode(n) bearbeiten
+tvshow.edit.abortqueue.desc=Breche Bearbeitung aller selektierten TV Serien ab
+tvshow.remove=Ausgewählte TV Serie(n) / Episode(n) entfernen
+tvshow.delete=Ausgewählte TV Serien/Episoden löschen (DB)
+tvshow.delete.hint=Ausgewählte TV Serien/Episoden löschen (DB + Dateien)
+tvshow.delete.desc=Ausgewählte TV Serien aus der DB und vom Filesystem löschen?\nDie Dateien werden zuerst in ein Verzeichnis ".deletedByTMM" verschoben und erst beim Beenden gelöscht.
 tvshow.changeseasonposter=Ändere Saison Poster von ausgewählten Saison(en)
-tvshow.change=Wechsle TV Show
+tvshow.change=Wechsle TV Serie
 tvshow.bulkedit=Mehrfach bearbeiten
-tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Shows ändern
+tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Serien ändern
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
-tvshow.update=ausgewählte TV Show(s) updaten
-tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
-tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows / Episoden
-tvshow.clearimagecache=Den Bildercache für ausgewählte Serien/Episoden löschen
+tvshow.update=ausgewählte TV Serien(s) aktualisieren
+tvshow.rewritenfo=NFO für ausgewählte TV Serien neu schreiben
+tvshow.rename=Umbenennen / Cleanup ausgewählter TV Serien / Episoden
+tvshow.clearimagecache=Den Bildercache für ausgewählte TV Serien/Episoden löschen
 tvshow.renamer.failedrename=Konnte Episode {} nicht umbenennen. Ungültige Saison- und/oder Episodennummer.
-tvshow.renamer.tvshowfolder=TV Show Ordner umbenennen
+tvshow.renamer.tvshowfolder=TV Serien Ordner umbenennen
 tvshow.renamer.tvshowfolder.year=Das Jahr zum Ordnername hinzufügen
-tvshow.updatemediainfo=Medianinformationen aus ausgewählten TvShow(s)/Episoden neu einlesen
-tvshow.export=ausgewählte TV Show(s) exportieren
-tvshow.synctrakt=TV Show Bibliothek mit Trakt.tv synchronisieren
-tvshow.synctrakt.desc=TV Show Bibliothek mit Trakt.tv synchronisieren
+tvshow.updatemediainfo=Medianinformationen aus ausgewählten TV Serien/Episoden neu einlesen
+tvshow.export=ausgewählte TV Serien exportieren
+tvshow.synctrakt=TV Serie Bibliothek mit Trakt.tv synchronisieren
+tvshow.synctrakt.desc=TV Serie Bibliothek mit Trakt.tv synchronisieren
 tvshow.synctraktwatched="Gesehen"-Status mit Trakt.tv synchronisieren
 tvshow.synctraktwatched.desc="Gesehen"-Status mit Trakt.tv synchronisieren
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
+tvshowepisode.scrape.withoutartwork=Scrape Episoden Metadaten (ohne Bilder)
 tvshowepisode.clone=Episode kopieren
 tvshowepisode.remove=Episode entfernen
 tvshowepisode.rewritenfo=NFO für ausgewählte Episode(n) neu schreiben
@@ -435,9 +479,10 @@ trakt.sync.tvshow=TV Bibliothek mit Trakt.tv synchronisieren
 trakt.sync.tvshowwatched="Gesehen" Status der TV Bibliothek mit Trakt.tv synchronisieren
 trakt.clear=Lösche Trakt.tv Daten
 trakt.clear.movies=Lösche Trakt.tv Film(e)
-trakt.clear.tvshows=Lösche Trakt.tv TvShow(s)
+trakt.clear.tvshows=Lösche Trakt.tv TV Serien
 
 # metatags
+metatag.3d=3D
 metatag.actors=Schauspieler
 metatag.aired=Erstausstrahlung
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=hinzugefügt am
 metatag.details=Detail
 metatag.details2=Detail 2
 metatag.director=Regie
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Episode
 metatag.episodes=Episoden
 metatag.external=Extern
@@ -501,8 +549,8 @@ metatag.title=Titel
 metatag.tmdb=TMDB Id
 metatag.top250=Top 250
 metatag.tvdb=TvDB ID
-metatag.tvshow=TV Show
-metatag.tvshows=TV Shows
+metatag.tvshow=TV Serie
+metatag.tvshows=TV Serien
 metatag.trailer=Film Trailer
 metatag.url=Url
 metatag.video=Video
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Untertitel
 mediafiletype.nfo=Info
+mediafiletype.text=Text
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
@@ -543,7 +592,7 @@ chooser.searchresult=Suchergebnis
 chooser.scrape=Scrape folgende Daten
 
 moviechooser.search=Film suchen
-tvshowchooser.search=Suche TV Show
+tvshowchooser.search=Suche TV Serie
 tvshowepisodechooser.search=Episode suchen
 
 movieextendedsearch.filter=Filter
@@ -591,7 +640,7 @@ message.update.threadcrashed=Fehler beim Updaten des Datenordners {} {}
 message.update.errormoviedir=Fehler beim Auslesen des Filmverzeichnisses {} {}
 
 message.database.loadmovies=Konnte keine Filme aus der DB laden
-message.database.loadtvshows=Konnte keine TV-Shows aus der DB laden
+message.database.loadtvshows=Konnte keine TV-Serien aus der DB laden
 message.database.corrupteddata=Es wurden fehlerhafte Daten gefunden und von der Datenbank entfernt. Bitte ein Datenupdate durchführen\!
 
 message.config.loadsettingserror=Fehler beim Laden der Einstellungen {} {}
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = Fernsehfilm
 Genres.THRILLER = Thriller
 Genres.WAR = Krieg
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />Die größe freie Filmdatenbank unterstützt durch die Community. Sie stellt Metadaten und Grafiken<br />in vielen verschiedenen Sprachen zur verfügung. Es ist die erste Anlaufstelle für Nicht-Englisch User<br /><br />Verfügbare Sprachen\: mehrere</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Die meistbenutze Filmdatenbank in der ganzen Welt.<br />Enthält nicht immer Beschreibung/Titel/Tagline in allen Sprachen. Du kannst aber die Werte von der TMDB übernehmen<br /><br />Verfügbare Sprachen\: mehrere</html>
+scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />Eine deutsche Filmdatenbank.<br /><br />Verfügbare Sprachen\: DE</html>
+scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />Eine deutsche Filmdatenbank.<br /><br />Verfügbare Sprachen\: DE</html>
+scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />Eine Niederländische Filmdatenbank.<br /><br />Verfügbare Sparchen\: NL</html>
+scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />Eine amerikanische FIlmdatenbank.<br />Beinhaltet leider keine Beschreibung zu älteren Filmen über die API<br /><br />Verfügbare Sparche\: EN</html>
