--- a/locale/messages_es.properties
+++ b/locale/messages_es.properties
@@ -14,6 +14,7 @@ Button.edit=Editar
 Button.register=Registro
 Button.rename=Renombrar
 Button.chooseplayer=Elegir reproductor
+Button.update=Actualización
 
 menuitem.cut=Cortar
 menuitem.copy=Copiar
@@ -82,7 +83,7 @@ task.queued=Esperando...
 task.cancelled=Cancelando...
 task.finished=Completado...
 task.imagedownloads=Descargando imágenes
-task.download=Ficheros descargados
+task.download=Descargando ...
 task.othertasks=Realización de tareas en segundo plano
 task.remaining=Tareas pendientes
 
@@ -115,7 +116,7 @@ movie.scrape.toolowscore=El rango de coincidencia es demasiado bajo (<{}) por lo
 movie.remove=Borrar película(s) seleccionada de tMM
 movie.delete=Eliminar película(s) seleccionada de tMM y de su origen de datos
 movie.delete.hint=Esta acción eliminara la película(s) seleccionada de tinyMediaManager y de su origen de datos\!
-movie.delete.desc=¿Esta seguro de querer eliminar la película(s) seleccionada de tinyMediaManager y de la fuente origen de datos?\nLos archivos serán temporalmente movidos a una carpeta llamada .deletedByTMM dentro de la carpeta\norigen de datos. Estos serán borrados al salir de tinyMediaManager
+movie.delete.desc=¿Esta seguro de querer eliminar la película(s) seleccionada de tinyMediaManager y de la fuente origen de datos? Los archivos serán temporalmente movidos a una carpeta llamada .deletedByTMM dentro de la carpeta origen de datos. Estos serán borrados al salir de tinyMediaManager
 movie.rename=Limpiar y renombrar película(s) seleccionada
 movie.renamepreview=Limpiar y renombrar la película(s) seleccionada - dry run
 movie.renamepreview.hint=<html>Crea una vista previa de las películas que tienen que ser renombradas <br /> Esta característica esta disponible solo para nuestros usuarios donantes</html>
@@ -187,6 +188,8 @@ scraper.artwork=Raspador Artwork
 scraper.trailer=Raspador Trailer
 
 image.choose=Seleccione una imagen
+# image.inserturl=Insert an url to an image here
+# image.downloadimage=Download image
 image.choose.file=Desde archivo
 image.choose.fanart=Seleccione un fanart
 image.choose.poster=Seleccione un póster
@@ -239,7 +242,7 @@ BugReport=Informar de un error
 BugReport.name=Nombre
 BugReport.email=Email
 BugReport.email.description=Por favor introduzca un email valido. Es posible que necesitemos comunicarnos con usted para obtener más información
-BugReport.description=Descripción
+BugReport.description=Descripción (en Inglés o Aleman\!)
 BugReport.description.empty=No ha proporcionado una descripción del error
 BugReport.attachments=Adjuntos
 BugReport.logs=Reportes
@@ -250,7 +253,7 @@ BugReport.send.ok=Informe enviado
 Feedback=Envíar comentario
 Feedback.name=Nombre (opcional)
 Feedback.email=Email (opcional)
-Feedback.message=Comentario
+Feedback.message=Comentarios (en Inglés o Alemán\!)
 Feedback.message.empty=El campo comentario esta vacío
 Feedback.send.error=Error al enviar comentario
 Feedback.send.ok=Comentario enviado correctamente
@@ -294,6 +297,10 @@ Settings.trakt.clearmovies=Borrar películas de Trakt.tv
 Settings.trakt.clearmovies.hint=ATENCIÓN\: Esta acción borrara todas tus películas de tu perfil de Trakt.tv. ¿Deseas continuar?
 Settings.trakt.cleartvshows=Borrar programas TV de Trakt.tv
 Settings.trakt.cleartvshows.hint=ATENCIÓN\: Esta acción borrara todos tus programas TV de tu perfil de Trakt.tv. ¿Deseas continuar?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Póster y fanart
@@ -326,13 +333,14 @@ Settings.preferredLanguage=Idioma preferido
 Settings.certificationCountry=País para calificación por edades
 Settings.scraperTreshold=Nivel de coincidencia (%)
 Settings.scraperTreshold.hint=Este indicador sirve para indicar como de exactos quieres que sean los resultados de búsqueda\ndurante las búsquedas automáticas.\n\nAl realizar un raspado automático se ignorarán los resultados cuyo rango de coincidencia este\npor debajo del nivel de porcentaje indicado.\n\nATENCIÓN\: Si ajusta este nivel demasiado bajo se obtendrán falsos positivos.\n\n1 \= 100% coincidente\n0.75 \= Mostrara los resultados más parecidos posibles (por defecto)\n0 \= Resultados dispares
-Settings.default.autoscrape=Raspar imagenes automaticamente (sin selección)
+Settings.default.autoscrape=Raspar imágenes automáticamente (sin selección)
+Settings.default.autoscrape.language=Hacer que prevalezca el lenguaje a la resolución en el momento de elegir imágenes
 Settings.automaticscraper=Raspado automático
 Settings.scraperfallback=Recurrir a otros raspadores cuando no se consiga resultado en la búsqueda
 
 # movie settings
 Settings.movie.datasource=Origen de datos
-Settings.movie.datasource.remove.info=Si borras %s de entre tus recursos, todas las películas que este contenga serán borradas de la base de datos de tMM.\n¿Seguro que deseas continuar?
+Settings.movie.datasource.remove.info=Si borra %s de entre tus recursos, todas las películas que este contenga serán borradas de la base de datos de tMM.\n¿Seguro que deseas continuar?
 Settings.movie.visiblecolumns=Columnas visibles
 
 Settings.datasource.folderchooser=Añadir origen de datos
@@ -350,6 +358,8 @@ Settings.sorting.info=Elija los artículos o prefijos que desea que no sean toma
 Settings.renamer=Renombrado
 Settings.renamer.folder=Nombre de carpeta
 Settings.renamer.file=Nombre de archivo
+# Settings.renamer.token=Token description
+# Settings.renamer.value=Value from the example
 Settings.renamer.asciireplacement=Reemplace los caracteres no ASCII por sus equivalentes ASCII básicos
 Settings.renamer.asciireplacement.hint=Ejemplos\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opciones de limpieza
@@ -367,25 +377,55 @@ Settings.trailer.preferred=Ajustes para Trailer
 Settings.trailer.source=Recurso  Trailer
 Settings.trailer.quality=Calidad Trailer
 
-Settings.movie.renamer.info=Argumentos renombrado\:\n$T \= Título\n$O \= Título Original\n$1 \= Primera letra del título\n$E \= Título ordenado\n$2 \= Primera letra del título ordenado\n$Y \= Año\n$M \= Título colección (título ordenado)\n$N \= Título colección\n$I \= IMDB Id\n$C \= Certification\n$R \= Resolución Vídeo\n$A \= Codec audio + canales\n$V \= Codec vídeo + formato\n$F \= Formato vídeo\n$S \= Tipo recurso multimedia (VHS, DVD, etc)\n$3 \= Tipo de 3D (3D SBS/TAB)\n\n{} \= opcional \nEjemplo\: {Año $Y} -> "Año 2013" Si $Y no esta vació,\nsi $Y estubiera vació (o no existiera) se ignorara este argumento
+# Settings.movie.renamer.title=Renamer pattern and options
+# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Elija un patrón para el renombrado de carpetas y archivos.\nNota\: Si desea omitir el renombrado deje vacíos estos campos.
 Settings.movie.renamer.nomovie=NOTA\: Se necesita al menos una película para el ejemplo
 Settings.movie.renamer.spacesubstitution=Sustituir espacios por
 
-Settings.tvshow.renamer.info=ToDo
-Settings.tvshow.renamer.example=ToDo
+# Settings.movie.renamer.$T=Title
+# Settings.movie.renamer.$O=Original title
+# Settings.movie.renamer.$1=first letter of the title
+# Settings.movie.renamer.$E=Sort title
+# Settings.movie.renamer.$2=first letter of sort title
+# Settings.movie.renamer.$Y=Year
+# Settings.movie.renamer.$M=Movieset title (sort title)
+# Settings.movie.renamer.$N=Movieset title
+# Settings.movie.renamer.$I=IMDB number
+# Settings.movie.renamer.$C=Certification
+# Settings.movie.renamer.$G=First genre
+# Settings.movie.renamer.$L=Language
+# Settings.movie.renamer.$R=Video resolution
+# Settings.movie.renamer.$A=audio code + channels
+# Settings.movie.renamer.$V=video code + format
+# Settings.movie.renamer.$F=video format
+# Settings.movie.renamer.$S=media source (DVD etc)
+# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+# Settings.tvshow.renamer.$N=TV show name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
 Settings.tvshowdatasource=Origen de datos para programas TV
 Settings.tvshowdatasource.folderchooser=Añadir origen de datos para programas TV
-Settings.tvshowdatasource.remove.info=Si borras %s de entre tus recursos, todos los programas de TV y episodios que este contenga serán borrados de la base de datos de tMM.\n¿Estas seguro que deseas continuar?
-Settings.tvshowseasontofilename=Añadir temporada al nombre del archivo
-Settings.tvshowtofilename=Añadir nombre del programa TV al nombre del archivo
-Settings.tvshowepisodetofilename=Añadir título del episodio al nombre del archivo
-Settings.tvshowseasonfoldername=Nombre de carpeta para temporadas
-Settings.tvshowseasonhint=$1 - Número temporada\n$2 - Número temporada con al menos 2 digitos\nPuede omitir la creación de la carpeta temporada dejando este campo en blanco.\nPero para usar esto, debe comprobar \\"add season to filename\\"
-Settings.separator=Separador
-Settings.separator.hint=Separador entre título y número temporada/episodio
+Settings.tvshowdatasource.remove.info=Si borra %s de entre sus recursos, todos los programas de TV y episodios que este contenga serán borrados de la base de datos de tMM.\n¿Estas seguro que deseas continuar?
+# Settings.dvdorder=Imported episodes are in DVD order
+
+# Settings.tvshowfoldername=TV show folder name
+# Settings.tvshowseasonfoldername=Season folder name
+# Settings.tvshowfilename=Episode file name
 Settings.tvshowspacereplacement.hint=Remplazar los espacios por estos caracteres
 Settings.tvshow.certifactioncountry.hint=Nota\: Por el momento ninguno de los raspadores soporta calificación por edades para diferentes países.\nLa base de datos para programas de TV siempre devolverá los valores para USA.\nAniDB no soporta calificación por edades.\n
 
@@ -420,8 +460,12 @@ tvshow.synctrakt=Sincronizar colección programas de televisión con Trakt.tv
 tvshow.synctrakt.desc=Sincronizar colección programas de televisión con Trakt.tv
 tvshow.synctraktwatched=Sincronizar películas vistas con Trakt.tv
 tvshow.synctraktwatched.desc=Sincronizar películas vistas con Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Raspar metadatos episodio
+tvshowepisode.scrape.withoutartwork=Raspar metadatos episodio (sin miniaturas)
 tvshowepisode.clone=Clonar episodio
 tvshowepisode.remove=Borrar episodio
 tvshowepisode.rewritenfo=Reescribir el archivo NFO para el episodio(s) seleccionado
@@ -438,6 +482,7 @@ trakt.clear.movies=Limpiar película(s) de Trakt.tv
 trakt.clear.tvshows=Limpiar programa(s) TV de Trakt.tv
 
 # metatags
+metatag.3d=3D
 metatag.actors=Actores
 metatag.aired=Primera emisión
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=Momento en que fue añadido
 metatag.details=Detalles
 metatag.details2=Detalles 2
 metatag.director=Director
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Episodio
 metatag.episodes=Episodios
 metatag.external=Externo
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Extras Vídeo
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Subtítulo
 mediafiletype.nfo=NFO
+mediafiletype.text=Texto
 mediafiletype.poster=Póster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = Telefilm
 Genres.THRILLER = Thriller
 Genres.WAR = Bélica
 Genres.WESTERN = Oeste
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+# scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages\: multiple</html>
+# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
+# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
+# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
+# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
+# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
