--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -14,6 +14,7 @@ Button.edit=Modifica
 # Button.register=Register
 # Button.rename=Rename
 # Button.chooseplayer=Choose player
+# Button.update=Update
 
 menuitem.cut=Taglia
 menuitem.copy=Copia
@@ -59,7 +60,7 @@ tmm.wakeonlandevice=Dispositivo Risveglio da Rete
 # tmm.images=Images
 # tmm.trailer=Trailer
 # tmm.subtitles=Subtitles
-# tmm.update.title=check for update
+# tmm.update.title=Check for update
 # tmm.update.message=A new update has been found.\nDo you want to update?
 # tmm.registeredto=Registered to\:
 # tmm.registerdonator=Register for donator version
@@ -115,7 +116,7 @@ movie.scrape.toosimilar=I titoli dei Film sono troppo simili - non so decidere q
 # movie.remove=Remove selected movie(s) (DB)
 # movie.delete=Delete selected movie(s) (DB + file)
 # movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
-# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
+# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source\nand deleted on exit of tinyMediaManager (if activated in settings)
 movie.rename=Rinomina/pulisci i Film selezionati
 # movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 # movie.renamepreview.hint=<html>Create a preview, which movies have to be renamed<br />This feature is restricted to our donators</html>
@@ -187,6 +188,8 @@ scraper.artwork=Raschiatore di artwork
 scraper.trailer=Raschiatore dei trailer
 
 image.choose=Scegli un'immagine
+# image.inserturl=Insert an url to an image here
+# image.downloadimage=Download image
 image.choose.file=Scegli un file
 image.choose.fanart=Scegli una fanart
 image.choose.poster=Scegli un poster
@@ -239,7 +242,7 @@ BugReport=Riporta un bug
 BugReport.name=Nome
 BugReport.email=Email
 BugReport.email.description=Inserisci una Email valida. Potremmo avere bisogno di contattarti per ottenere più informazioni
-BugReport.description=Descrizione
+# BugReport.description=Description (in English or German\!)
 BugReport.description.empty=Nessuna descrizione fornita
 BugReport.attachments=Allegati
 BugReport.logs=Log
@@ -250,7 +253,7 @@ BugReport.send.ok=Report bug inviato
 Feedback=Invia feedback
 Feedback.name=Nome (opzionale)
 Feedback.email=Email (opzionale)
-Feedback.message=Feedback
+# Feedback.message=Feedback (in English or German\!)
 Feedback.message.empty=Il feedback è vuoto
 Feedback.send.error=Errore nell'invio del feedback
 Feedback.send.ok=Feedback inviato
@@ -294,6 +297,10 @@ Settings.languagehint=La lingua cambierà al riavvio\!
 # Settings.trakt.clearmovies.hint=ATTENTION\: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
 # Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
 # Settings.trakt.cleartvshows.hint=ATTENTION\: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Poster e Fanart
@@ -326,7 +333,8 @@ Settings.preferredLanguage=Lingua preferita
 Settings.certificationCountry=Paese di certificazione
 Settings.scraperTreshold=soglia punteggio
 # Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
-Settings.default.autoscrape=Raschia automaticamente le immagini (senza selezione)
+# Settings.default.autoscrape=Automatically scrape images (without selection)
+# Settings.default.autoscrape.language=Prefer language over resolution when choosing images
 # Settings.automaticscraper=Automatic scraper
 # Settings.scraperfallback=Fall back to other scrapers when getting no search result
 
@@ -350,6 +358,8 @@ Settings.sorting=Ordinamento titoli
 Settings.renamer=Rinominatore
 Settings.renamer.folder=Nome cartella
 Settings.renamer.file=Nome file
+# Settings.renamer.token=Token description
+# Settings.renamer.value=Value from the example
 # Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
 # Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Pulisci opzioni
@@ -367,25 +377,55 @@ Settings.macaddress=Indirizzo MAC
 # Settings.trailer.source=Trailer source
 # Settings.trailer.quality=Trailer quality
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+# Settings.movie.renamer.title=Renamer pattern and options
+# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 Settings.movie.renamer.nomovie=almeno un Film è necessario per l'esempio
 Settings.movie.renamer.spacesubstitution=Rimpiazza spazi con
 
-Settings.tvshow.renamer.info=Da Fare
-Settings.tvshow.renamer.example=Da Fare
+# Settings.movie.renamer.$T=Title
+# Settings.movie.renamer.$O=Original title
+# Settings.movie.renamer.$1=first letter of the title
+# Settings.movie.renamer.$E=Sort title
+# Settings.movie.renamer.$2=first letter of sort title
+# Settings.movie.renamer.$Y=Year
+# Settings.movie.renamer.$M=Movieset title (sort title)
+# Settings.movie.renamer.$N=Movieset title
+# Settings.movie.renamer.$I=IMDB number
+# Settings.movie.renamer.$C=Certification
+# Settings.movie.renamer.$G=First genre
+# Settings.movie.renamer.$L=Language
+# Settings.movie.renamer.$R=Video resolution
+# Settings.movie.renamer.$A=audio code + channels
+# Settings.movie.renamer.$V=video code + format
+# Settings.movie.renamer.$F=video format
+# Settings.movie.renamer.$S=media source (DVD etc)
+# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+# Settings.tvshow.renamer.$N=TV show name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
 Settings.tvshowdatasource=aggiungi fonte dati per Serie Tv
 Settings.tvshowdatasource.folderchooser=aggiungi fonte dati per Serie Tv
 # Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the TMM database. Continue?
-Settings.tvshowseasontofilename=aggiungi stagione al nome del file
-Settings.tvshowtofilename=Aggiungi Serie Tv al nome del file
-Settings.tvshowepisodetofilename=aggiungi il titolo dell'episodio al nome del file
-Settings.tvshowseasonfoldername=nome della cartella della stagione
-# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \\"add season to filename\\"
-# Settings.separator=Separator
-# Settings.separator.hint=Separator between title and season/episode number
+# Settings.dvdorder=Imported episodes are in DVD order
+
+# Settings.tvshowfoldername=TV show folder name
+# Settings.tvshowseasonfoldername=Season folder name
+# Settings.tvshowfilename=Episode file name
 # Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 # Settings.tvshow.certifactioncountry.hint=Hint\: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications
 
@@ -420,8 +460,12 @@ tvshow.renamer.failedrename=Ridenominazione episodio fallita  {} - stagione e/o 
 # tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
 # tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
 # tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Raschia metadata episodio
+# tvshowepisode.scrape.withoutartwork=Scrape episode metadata (without thumbs)
 tvshowepisode.clone=Clona episodio
 tvshowepisode.remove=Elimina episodio
 tvshowepisode.rewritenfo=Riscrivi NFO per gli episodi selezionati
@@ -438,6 +482,7 @@ tvshowepisode.choose=Scegli un episodio
 # trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
+# metatag.3d=3D
 metatag.actors=Attori
 metatag.aired=Trasmesso
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=Data di aggiunta
 metatag.details=Dettagli
 metatag.details2=Dettagli 2
 metatag.director=Regista
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Episodio
 metatag.episodes=Episodi
 metatag.external=esterno
@@ -520,6 +568,7 @@ mediafiletype.video=Video
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Sottotitolo
 mediafiletype.nfo=NFO
+# mediafiletype.text=Text
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Striscione
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = Film Tv
 Genres.THRILLER = Thriller
 Genres.WAR = Guerra
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+# scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages\: multiple</html>
+# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
+# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
+# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
+# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
+# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
