--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -14,6 +14,7 @@ Button.edit=Bewerk
 Button.register=Registreer
 Button.rename=Hernoem
 Button.chooseplayer=Kies speler
+Button.update=Update
 
 menuitem.cut=Cut
 menuitem.copy=Kopieer
@@ -59,7 +60,7 @@ tmm.nfo=NFO
 tmm.images=Afbeeldingen
 tmm.trailer=Trailer
 tmm.subtitles=Ondertitels
-tmm.update.title=check voor update
+tmm.update.title=Zoek naar update
 tmm.update.message=Er is een nieuwe update gevonden.\nWil je updaten?
 tmm.registeredto=Geregistreerd voor\:
 tmm.registerdonator=Registreer voor de donateur versie
@@ -115,7 +116,7 @@ movie.scrape.toolowscore=Gelijkenis score was te laag (<{}) dus dit resultaat wo
 movie.remove=Verwijder geselecteerd film(s) (DB)
 movie.delete=Verwijder geselecteerde film(s) (DB + file)
 movie.delete.hint=Verwijder geselecteerde film(s) uit tinyMediaManager DB en de databron
-movie.delete.desc=Verwijder geselecteerde film(s) uit tinyMediaManager DB en de databron?\nDe bestanden worden tijdelijk verplaatst naar de folder genaamd .deletedByTMM in de databron en verwijderd bij het afsluiten van tinyMediaManager
+movie.delete.desc=Verwijder geselecteerde film(s) uit tinyMediaManager DB en de databron?\nDe bestanden worden tijdelijk verplaatst naar de folder genaamd .deletedByTMM in de databron en verwijderd bij het afsluiten van tinyMediaManager (Mits geactiveerd in instellingen)
 movie.rename=Geselecteerde film(s) hernoemen/opschonen 
 movie.renamepreview=Hernoemen/opruimen geselecteerde film(s) - test
 movie.renamepreview.hint=<html>Creeër een voorbeeld van de films die hernoemd moeten worden<br />Deze functie is voorbehouden aan donateurs</html>
@@ -187,6 +188,8 @@ scraper.artwork=Artwork scraper
 scraper.trailer=Trailer scraper
 
 image.choose=Kies een afbeelding
+image.inserturl=Voeg hier een url naar een afbeelding in
+image.downloadimage=Afbeelding downloaden
 image.choose.file=Selecteer bestand
 image.choose.fanart=Kies fanart
 image.choose.poster=Kies Poster
@@ -239,7 +242,7 @@ BugReport=Rapporteer een bug
 BugReport.name=Naam
 BugReport.email=Email
 BugReport.email.description=Voer een geldig email adres in. Mogelijk nemen we contact op voor meer informatie
-BugReport.description=Beschrijving
+BugReport.description=Beschrijving (Engels of Duits)
 BugReport.description.empty=Geen beschrijving verstrekt
 BugReport.attachments=Bijlagen
 BugReport.logs=Logs
@@ -250,7 +253,7 @@ BugReport.send.ok=Bug rapport verzonden
 Feedback=Zend feedback
 Feedback.name=Naam (optioneel)
 Feedback.email=Email (optioneel)
-Feedback.message=Feedback
+Feedback.message=Feedback (Engels of Duits)
 Feedback.message.empty=Feedback is leeg
 Feedback.send.error=Fout tijdens zenden feedback
 Feedback.send.ok=Feedback verzonden
@@ -294,6 +297,10 @@ Settings.trakt.clearmovies=Verwijder films uit Trakt.tv
 Settings.trakt.clearmovies.hint=Waarschuwing\: Dit zal al uw films en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
 Settings.trakt.cleartvshows=Verwijder TV series uit Trakt.tv
 Settings.trakt.cleartvshows.hint=Waarschuwing\: Dit zal al uw TV series en bekeken status uit uw Trakt.tv profiel verwijderen. Doorgaan?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Poster en Fanart
@@ -326,7 +333,8 @@ Settings.preferredLanguage=Voorkeurstaal
 Settings.certificationCountry=Certificatie land
 Settings.scraperTreshold=Waardering drempel
 Settings.scraperTreshold.hint=Dit is een indicator hoe gelijkend de zoek vraag en resulaten zijn.\nDe automatische scraper negeerd resultaten die onder de drempel vallen.\nOPGELET\: Een te lage waarde zal resulteren in foutieve resultaten\!\n\n1 \= 100% gelijkend\n0.75 \= Standaard\n0 \= Ze zijn totaal verschillend
-Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
+Settings.default.autoscrape=Automatisch afbeeldingen scrapen (zonder selectie)
+Settings.default.autoscrape.language=Verkies taal boven resolutie bij afbeeldingen kiezen
 Settings.automaticscraper=Automatische scraper
 Settings.scraperfallback=Gebruik alternatieve scrapers als er geen zoek resultaten zijn
 
@@ -350,6 +358,8 @@ Settings.sorting.info=Kies voorvoegsels. Heeft invloed op de sorteer volgorde va
 Settings.renamer=Naam Aanpasser
 Settings.renamer.folder=Map naam
 Settings.renamer.file=Bestandsnaam
+# Settings.renamer.token=Token description
+# Settings.renamer.value=Value from the example
 Settings.renamer.asciireplacement=Vervang niet ASCII karakters met hun basis ASCII equivalent
 Settings.renamer.asciireplacement.hint=Voorbeelden\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Opschoon opties
@@ -367,25 +377,55 @@ Settings.trailer.preferred=Gebruik voorkeurs instellingen voor trailers
 Settings.trailer.source=Trailer bron
 Settings.trailer.quality=Trailer kwaliteit
 
-Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$C \= Certificering\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat\n$F \= video formaat\n$S \= media bron (DVD etc)\n$3 \= 3D tag (3D SBS/TAB)\n\n{} \= Optionele vervanging\nbv\: {Jaar $Y} -> "Jaar 2013" als $Y niet leeg is\nals $Y leeg is (of geen $x vervanging)\nde complete tag is leeg
+# Settings.movie.renamer.title=Renamer pattern and options
+# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door
 
-Settings.tvshow.renamer.info=Te doen
-Settings.tvshow.renamer.example=Te doen
+# Settings.movie.renamer.$T=Title
+# Settings.movie.renamer.$O=Original title
+# Settings.movie.renamer.$1=first letter of the title
+# Settings.movie.renamer.$E=Sort title
+# Settings.movie.renamer.$2=first letter of sort title
+# Settings.movie.renamer.$Y=Year
+# Settings.movie.renamer.$M=Movieset title (sort title)
+# Settings.movie.renamer.$N=Movieset title
+# Settings.movie.renamer.$I=IMDB number
+# Settings.movie.renamer.$C=Certification
+# Settings.movie.renamer.$G=First genre
+# Settings.movie.renamer.$L=Language
+# Settings.movie.renamer.$R=Video resolution
+# Settings.movie.renamer.$A=audio code + channels
+# Settings.movie.renamer.$V=video code + format
+# Settings.movie.renamer.$F=video format
+# Settings.movie.renamer.$S=media source (DVD etc)
+# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+# Settings.tvshow.renamer.$N=TV show name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
 Settings.tvshowdatasource=TV show databronnen
 Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
 Settings.tvshowdatasource.remove.info=Als je %s uit de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
-Settings.tvshowseasontofilename=Voeg seizoen aan bestandsnaam toe
-Settings.tvshowtofilename=voeg TV serie naam aan bestandsnaam toe
-Settings.tvshowepisodetofilename=voeg aflevering titel toe aan bestandsnaam
-Settings.tvshowseasonfoldername=seizoen map naam
-Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers\nUw kunt voorkomen dat er een seizoen map wordt aangemaakt door dit veld leeg te laten. Maar om het te gebruiken moet u \\"voeg seizoen toe aan bestandsnaam\\" aan vinken
-Settings.separator=Seperator
-Settings.separator.hint=Scheiding tussen titel en seizoen/aflevering nummer
+# Settings.dvdorder=Imported episodes are in DVD order
+
+# Settings.tvshowfoldername=TV show folder name
+# Settings.tvshowseasonfoldername=Season folder name
+# Settings.tvshowfilename=Episode file name
 Settings.tvshowspacereplacement.hint=Vervang spaties in titel met dit karakter
 Settings.tvshow.certifactioncountry.hint=Tip\: Momenteel ondersteund geen enkele scraper certificaties uit verschillende landen. \nDe TV Database zal altijd US certificaties opleveren.\nAniDB biedt geen certificaties
 
@@ -420,8 +460,12 @@ tvshow.synctrakt=Synchroniseer de TV serie collectie met Trakt.tv
 tvshow.synctrakt.desc=Synchroniseer de TV serie collectie met Trakt.tv
 tvshow.synctraktwatched=Synchroniseer de bekeken status met Trakt.tv
 tvshow.synctraktwatched.desc=Synchroniseer de bekeken status met Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Metadata aflevering scrapen
+tvshowepisode.scrape.withoutartwork=Scrape aflevering metadata (zonder thumbs)
 tvshowepisode.clone=Dupliceer aflevering
 tvshowepisode.remove=Wis aflevering
 tvshowepisode.rewritenfo=Herschrijf NFO voor geselecteerde aflevering(en)
@@ -438,6 +482,7 @@ trakt.clear.movies=Trakt.tv film(s) data verwijderen
 trakt.clear.tvshows=Trakt.tv TV serie(s) data verwijderen
 
 # metatags
+metatag.3d=3D
 metatag.actors=Acteurs
 metatag.aired=Uitgezonden
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=Datum toegevoegd
 metatag.details=Details
 metatag.details2=Details 2
 metatag.director=Regisseur
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Aflevering
 metatag.episodes=Afleveringen
 metatag.external=extern
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Video Extra's
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Ondertitel
 mediafiletype.nfo=NFO
+mediafiletype.text=Tekst
 mediafiletype.poster=Poster
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = TV film
 Genres.THRILLER = Thriller
 Genres.WAR = Oorlog
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />De grootste gratis film database onderhouden door haar gebruikers. Het levert metadata en afbeeldingen<br />in vele verschillende talen. Dus it het de eerste keuze voor niet engelse gebruikers.<br /><br />Beschikbare talen\: Verschillende</html>
+# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
+# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
+# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
+# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
+# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
