--- a/locale/messages_no.properties
+++ b/locale/messages_no.properties
@@ -14,6 +14,7 @@ Button.edit=Redigere
 Button.register=Registrer
 Button.rename=Omdøp
 Button.chooseplayer=Velg spiller
+Button.update=Oppdater
 
 menuitem.cut=Klipp ut
 menuitem.copy=Kopier
@@ -65,7 +66,7 @@ tmm.registeredto=Registrert til\:
 tmm.registerdonator=Registrer for donasjons versjon
 tmm.registerdonator.error=Det oppstod et problem under registrering av din versjon.\nRegistrering av donasjoner i våre systemer kan ta en stund. Forsøk igjen om noen minutter.
 tmm.registerdonator.success=Takk for registrering av donasjons versjonen. Start tMM på nytt.
-# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters.\n\nPlease fill in the name and email address you used when donating.
+tmm.registerdonator.hint=Her kan du registrere deg for donasjons versjon. Donasjons versjonen vil innehold noen spesielle funksjoner som en takk til de som donerer.\n\nFyll inn navnet og e-post adressen du brukte da du donerte.
 tmm.registerdonator.thanks=Du har allerede registrert deg for donasjons versjonen. Takk igjen for doneringen\!
 tmm.donatorfunction.hint=Denne funksjonen er forbeholdt de som donerer.
 tmm.help=Hjelp
@@ -112,10 +113,10 @@ movie.scrape.metadata.desc=Hent metadata for valgt(e) film(er)
 movie.scrape.nomatchfound=Ingen passende film funnet ved søk
 movie.scrape.toosimilar=Film titlene er for like - kan ikke velge hvilken som skal brukes
 movie.scrape.toolowscore=Likehetsverdien var for lav (<{}) så resultatet blir ikke brukt
-# movie.remove=Remove selected movie(s) (DB)
-# movie.delete=Delete selected movie(s) (DB + file)
-# movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
-# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
+movie.remove=Fjern valgt(e) film(er) (DB)
+movie.delete=Slett valgt(e) film(er) (DB + fil)
+movie.delete.hint=Slett valgt(e) film(er) fra tinyMediaManager DB og fra datakilden
+movie.delete.desc=Slett valgt(e) film(er) fra tinyMediaManager DB og fra datakilden?\n\nFilene vil midlertidig bli flyttet til en mappe som heter .deletedByTMM, i samme katalog som datakilden, og slettes når tinyMediaManager avsluttes (hvis aktivert under innstillinger). 
 movie.rename=Omdøping/opprydding av valgt(e) film(er)
 movie.renamepreview=Omdøping/opprydding av valgt(e) film(er) - testkjøring
 movie.renamepreview.hint=<html>Forhåndsvisning av filmer som må omdøpes<br />Denne funksjonen er forbeholdt de som donerer</html>
@@ -187,6 +188,8 @@ scraper.artwork=Illustrasjons innsamler
 scraper.trailer=Trailere linkes til
 
 image.choose=Velg et bilde
+image.inserturl=Legg inn en URL til et bilde her
+image.downloadimage=Last ned bilde
 image.choose.file=Velg fil
 image.choose.fanart=Velg fanart
 image.choose.poster=Velg plakat
@@ -239,7 +242,7 @@ BugReport=Meld fra om feil
 BugReport.name=Navn
 BugReport.email=E-post
 BugReport.email.description=Bruk en godkjent e-post adresse. Vi kan komme til å trenge mer informasjon
-BugReport.description=Beskrivelse
+BugReport.description=Beskrivelse (på Engelsk eller Tysk\!)
 BugReport.description.empty=Ingen beskrivelse gitt
 BugReport.attachments=Vedlegg
 BugReport.logs=Logger
@@ -250,7 +253,7 @@ BugReport.send.ok=Feil rapport sendt
 Feedback=Send tilbakemelding
 Feedback.name=Navn (valgfritt)
 Feedback.email=E-post (valgfritt)
-Feedback.message=Tilbakemelding
+Feedback.message=Tilbakemelding (på Engelsk eller Tysk\!)
 Feedback.message.empty=Tilbakemelding er tom
 Feedback.send.error=Feil ved sending av tilbakemelding
 Feedback.send.ok=Tilbakemelding sendt
@@ -294,6 +297,10 @@ Settings.trakt.clearmovies=Fjern filmer fra Trakt.tv
 Settings.trakt.clearmovies.hint=VIKTIG\: Dette vil fjerne alle filmene og alle "har sett" fra din Trakt.tv profil. Fortsette?
 Settings.trakt.cleartvshows=Fjern TV serier fra Trakt.tv
 Settings.trakt.cleartvshows.hint=VIKTIG\: Dette vil fjerne alle TV serier og "har sett" tilstander fra Trakt.tv profilen din. Fortsett?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Plakater og Fanart
@@ -326,7 +333,8 @@ Settings.preferredLanguage=Foretrukket språk
 Settings.certificationCountry=Aldersgrense innstillinger
 Settings.scraperTreshold=Terskelverdi
 Settings.scraperTreshold.hint=Terskelen er en verdi for likheten mellom søkestreng og søkeresultat. Den\nautomatiske datainnsamlingen vil ignorere søkeresultat der verdien havner\nunder terskelen.\n\nNOTE\: Lavere terskel gir høyere risiko for innsamlingsfeil\!\n\n1,00 \= 100% likhet\n0,75 \= Standard\n0,00 \= Totalt ulik
-Settings.default.autoscrape=Automatisk bildeinnsamling (ingen valg)
+Settings.default.autoscrape=Automatiske bildeinnsamling (uten valg)
+Settings.default.autoscrape.language=Foretrekk språk over oppløsning ved valg av bilder
 Settings.automaticscraper=Automatisk innsamling
 Settings.scraperfallback=Forsøke andre datainnsamlere hvis ingen resultat
 
@@ -350,6 +358,8 @@ Settings.sorting.info=Velg prefiks. Dette vil påvirke sorteringsrekkefølgen i 
 Settings.renamer=Omdøper
 Settings.renamer.folder=Mappenavn
 Settings.renamer.file=Filnavn
+Settings.renamer.token=Symbol beskrivelse
+Settings.renamer.value=Verdi fra eksemplet
 Settings.renamer.asciireplacement=Kun ASCII tegn tillatt
 Settings.renamer.asciireplacement.hint=F.eks. vil "æ" måtte skrives som "ae", "ø" som "oe" og "å" som "aa".
 Settings.cleanupoptions=Opprydnings innstillinger
@@ -367,25 +377,55 @@ Settings.trailer.preferred=Bruk prefererte trailer innstillinger
 Settings.trailer.source=Trailer kilde
 Settings.trailer.quality=Trailer kvalitet
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+Settings.movie.renamer.title=Mønster og valg for Omdøperen
+Settings.movie.renamer.optional={} \= valgfri erstatning\nf.eks.\: {År $Y} -> "År 2013" hvis $Y ikke er tom.
 Settings.movie.renamer.example=Velg en mappe og et mønster for filomdøping. Hvis feltene er tomme vil programmet hoppe over filomdøpingen\!
 Settings.movie.renamer.nomovie=minst en film må markeres for at eksemplet skal fungere
 Settings.movie.renamer.spacesubstitution=Bytt mellomrom med
 
-Settings.tvshow.renamer.info=Å Gjøre
-Settings.tvshow.renamer.example=Å Gjøre
+Settings.movie.renamer.$T=Tittel
+Settings.movie.renamer.$O=Original tittel
+Settings.movie.renamer.$1=første bokstav i tittel
+Settings.movie.renamer.$E=Sorter på tittel
+Settings.movie.renamer.$2=første bokstav i sortert tittel
+Settings.movie.renamer.$Y=År
+Settings.movie.renamer.$M=Film-sett tittel (sorter på tittel)
+Settings.movie.renamer.$N=Film-sett tittel
+Settings.movie.renamer.$I=IMDB nummer
+Settings.movie.renamer.$C=Aldersgrense
+# Settings.movie.renamer.$G=First genre
+Settings.movie.renamer.$L=Språk
+Settings.movie.renamer.$R=Film oppløsning
+Settings.movie.renamer.$A=Audio kode + kanaler
+Settings.movie.renamer.$V=video kode + format
+Settings.movie.renamer.$F=video format
+Settings.movie.renamer.$S=media kilde (DVD etc.)
+Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+# Settings.tvshow.renamer.$N=TV show name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
 Settings.tvshowdatasource=Datakilder for TV Serier
 Settings.tvshowdatasource.folderchooser=legg til datakilde for TV serier
 Settings.tvshowdatasource.remove.info=Hvis du fjerner %s fra dine datakilder vil alle berørte TV serier bli fjernet fra databasen. Fortsette?
-Settings.tvshowseasontofilename=legg til sesong i filnavnet
-Settings.tvshowtofilename=legg til TV serie navnet i filnavnet
-Settings.tvshowepisodetofilename=legg til episodens tittel i filnavnet
-Settings.tvshowseasonfoldername=sesong mappe navn
-Settings.tvshowseasonhint=$1 - Sesong nummer\n$2 - Sesong nummer med minst to tall\nDu kna hoppe over opprettelse av sesong mapper ved å la dette feltet stå blankt.\nFor å bruke denne funksjonen må sette hake ved \\"legg sesong til filnavn\\"
-Settings.separator=Separator
-Settings.separator.hint=Skilletegn mellom tittel og sesong/episode nummer
+# Settings.dvdorder=Imported episodes are in DVD order
+
+# Settings.tvshowfoldername=TV show folder name
+# Settings.tvshowseasonfoldername=Season folder name
+# Settings.tvshowfilename=Episode file name
 Settings.tvshowspacereplacement.hint=Bytt mellomrom i tittel med dette tegnet
 Settings.tvshow.certifactioncountry.hint=Hint\: ingen av datainnsamlerne støtter aldersgrense fra forskjellige land.\nTV Database vil alltid returnere aldersgrense fra US.\nAniDB støtter ikke aldersgrense.
 
@@ -420,8 +460,12 @@ tvshow.synctrakt=Synkroniser TV serie samlingen med Trakt.tv
 tvshow.synctrakt.desc=Synkroniser TV serie samlingen med Trakt.tv
 tvshow.synctraktwatched=Synkroniser "har sett" tilstand med Trakt.tv
 tvshow.synctraktwatched.desc=Synkroniser "har sett" tilstand med Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Hent metadata for episode
+tvshowepisode.scrape.withoutartwork=Hent metadata for episode (ikke miniatyrbilder)
 tvshowepisode.clone=Kopier episode
 tvshowepisode.remove=Fjern episode
 tvshowepisode.rewritenfo=Lag NFO for valgt(e) episode(r) på nytt
@@ -438,6 +482,7 @@ trakt.clear.movies=Fjerner Trakt.tv film(er)
 trakt.clear.tvshows=Fjerner Trakt.tv TV serie(r)
 
 # metatags
+metatag.3d=3D
 metatag.actors=Skuespillere
 metatag.aired=Vist på TV
 metatag.artwork=Illustrasjoner
@@ -453,6 +498,9 @@ metatag.dateadded=Dato lagt til
 metatag.details=Detaljer
 metatag.details2=Detaljer 2
 metatag.director=Instruktør
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Episode
 metatag.episodes=Episoder
 metatag.external=eksternt
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Video ekstra
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Undertekst
 mediafiletype.nfo=NFO
+mediafiletype.text=Tekst
 mediafiletype.poster=Plakat
 mediafiletype.fanart=Fanart
 mediafiletype.banner=Banner
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = TV Film
 Genres.THRILLER = Thriller
 Genres.WAR = Krig
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=The Movie Database (TMDb)\nDen største, gratis, database som er vedlikeholdt av fellesskapet. Her finner du metadata og bilder i mange forskjellige språk. Derfor er denne ofte førstevalget for ikke-engelske brukere.\n\nTilgjengelige språk\: flere
+scraper.imdb.hint=Internet Movie Database (IMDB)\nVerdens mest brukte database for filmer. Inneholder ikke film plot/tittel på alle språk. Du kan velge å laste ned info fra TMDB.\n\nTilgjengelige språk\: flere
+scraper.ofdb.hint=Online Filmdatenbank (OFDb)\nEn tysk film database vedlikeholdt av fellesskapet.\n\nTilgjengelige språk\: Tysk
+scraper.zelluloid.hint=Zelluloid.de\nTysk film database.\n\nTilgjengelige språk\: DE
+scraper.moviemeter.hint=Moviemeter.nl\nEn nederlandsk film database.\n\nTilgjengelige språk\: NL
+scraper.rottentomatoes.hint=Rotten Tomatoes\nEn Amerikansk film database.\nPlot er ikke tilgjengelig for eldre filmer.\n\nTilgjengelige språk\: EN
