--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -14,6 +14,7 @@ Button.edit=Upraviť
 Button.register=Registrovať
 Button.rename=Premenovať
 Button.chooseplayer=Vybrať prehrávač
+Button.update=Aktualizovať
 
 menuitem.cut=Vystrihnúť
 menuitem.copy=Kopírovať
@@ -59,7 +60,7 @@ tmm.nfo=NFO
 tmm.images=Obrázky
 tmm.trailer=Trailer
 tmm.subtitles=Titulky
-tmm.update.title=skontrolovať aktualizácie
+tmm.update.title=Skontrolovať aktualizácie
 tmm.update.message=Bola nájdená aktualizácia.\nChcete aktualizovať?
 tmm.registeredto=Registrované na\:
 tmm.registerdonator=Registrovať sponzorskú verziu
@@ -115,7 +116,7 @@ movie.scrape.toolowscore=Zhoda bola príliš nízka (<{}) preto bol tento výsle
 movie.remove=Odstrániť označené filmy (databáza)
 movie.delete=Odstrániť označené filmy (databáza+súbor)
 movie.delete.hint=Odstrániť označené filmy z tinyMediaManager databázy a zo zdroja dát\!
-movie.delete.desc=Odstrániť označené filmy z tinyMediaManager databázy a zo zdroja dát?\nSúbory budu dočasne presunuté do zložky .deletedByTMM umiestnenej v zdroji dát a vymazané pri ukončení tinyMediaManageru
+movie.delete.desc=Odstrániť označené filmy z tinyMediaManager databázy a zo zdroja dát?\nSúbory budu dočasne presunuté do zložky .deletedByTMM umiestnenej v zdroji dát a vymazané pri ukončení tinyMediaManageru (pokiaľ je aktivované v nastaveniach)
 movie.rename=Premenovať/vyčistiť označené filmy
 movie.renamepreview=Premenovať/vyčistiť označené filmy - dry run test
 movie.renamepreview.hint=Vytvoriť náhľad filmov, ktoré majú byť premenované. Táto funkcia je vyhradená pre našich sponzorov.
@@ -187,6 +188,8 @@ scraper.artwork=Scraper artworku
 scraper.trailer=Scraper traileru
 
 image.choose=Vybrať obrázok
+image.inserturl=Vložte URL adresu obrázka
+image.downloadimage=Stiahnuť obrázok
 image.choose.file=Vybrať súbor
 image.choose.fanart=Vybrať FanArt
 image.choose.poster=Vybrať plagát
@@ -239,7 +242,7 @@ BugReport=Nahlás chybu
 BugReport.name=Meno
 BugReport.email=Email
 BugReport.email.description=Zadajte prosím platný email. Možno Vás budeme musieť kontaktovať pre viac informácii
-BugReport.description=Popis
+BugReport.description=Popis (v angličtine alebo nemčine)
 BugReport.description.empty=Popis nie je dostupný
 BugReport.attachments=Prílohy
 BugReport.logs=Záznamy
@@ -250,7 +253,7 @@ BugReport.send.ok=Správa o chybe odoslaná
 Feedback=Poslať spätnú väzbu
 Feedback.name=Meno (voliteľné)
 Feedback.email=Email (voliteľné)
-Feedback.message=Spätná väzba
+Feedback.message=Spätná väzba (v angličtine alebo nemčine)
 Feedback.message.empty=Spätná väzba je prázdna
 Feedback.send.error=Chyba pri posielaní spätnej väzby
 Feedback.send.ok=Spätná väzba odoslaná
@@ -294,6 +297,10 @@ Settings.trakt.clearmovies=Odstrániť filmy z Trakt.tv
 Settings.trakt.clearmovies.hint=POZOR\: Toto odstráni všetky vaše filmy a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
 Settings.trakt.cleartvshows=Odstrániť seriály z Trakt.tv
 Settings.trakt.cleartvshows.hint=POZOR\: Toto odstráni všetky vaše seriály a označenie 'Videné' z vášho Trakt.tv profilu. Pokračovať?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=Plagát a FanArt
@@ -326,7 +333,8 @@ Settings.preferredLanguage=Preferovaný jazyk
 Settings.certificationCountry=Krajina pre certifikáciu
 Settings.scraperTreshold=Hranica zhody pre vyhľadávanie
 Settings.scraperTreshold.hint=Toto je ukazovateľ zhody vyhľadávaného dotazu s nájdenými výsledkami. \nAutomatický scraper bude ignorovať výsledky vyhľadávania pod hranicou.\nPOZOR\: Nastavenie hranice príliš nízko bude mať za následok chybné výsledky\! \n\n1 \= 100% rovnaké \n0,75 \= predvolené\n0 \= úplne odlišné
-Settings.default.autoscrape=automaticky sťahovať obrázky (bez výberu)
+Settings.default.autoscrape=Automaticky sťahovať obrázky (bez výberu)
+Settings.default.autoscrape.language=Uprednostniť jazyk pred rozlíšením pri výbere obrázka
 Settings.automaticscraper=Automatický scraper
 Settings.scraperfallback=Ak nie sú žiadne výsledky pre vyhľadávanie, použiť ostatné scrapery
 
@@ -350,6 +358,8 @@ Settings.sorting.info=Vybrať prefixy, ktoré budú mať vplyv na poradie v zozn
 Settings.renamer=Premenovanie
 Settings.renamer.folder=Názov priečinku
 Settings.renamer.file=Názov súboru
+# Settings.renamer.token=Token description
+# Settings.renamer.value=Value from the example
 Settings.renamer.asciireplacement=Nahradiť znaky nenachádzajúce sa v ASCII ich ekvivalentami ASCII
 Settings.renamer.asciireplacement.hint=Napíklad\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Nastavenia čistenia
@@ -367,25 +377,55 @@ Settings.trailer.preferred=Použiť preferované nastavenia traileru
 Settings.trailer.source=Zdroj traileru
 Settings.trailer.quality=Kvalita traileru
 
-Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$C \= Certifikát\n$R \= Rozlíšenie videa\n$A \= Audio kódovanie + kanály\n$V \= Video kódovanie + formát\n$F \= Video formát\n$S \= zdroj média (DVD atď.)\n$3 \= 3D značka (3D SBS/TAB)\n\n{} \= voliteľná náhrada\nnapr.\: {Rok $Y} -> "Rok 2013"ak $Y nie je prázdny\nak $Y je prázdny (alebo nie je vnútri náhrada $x)\ncelý tag je prázdny
+# Settings.movie.renamer.title=Renamer pattern and options
+# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
 
-Settings.tvshow.renamer.info=ToDo
-Settings.tvshow.renamer.example=ToDo
+Settings.movie.renamer.$T=Názov
+Settings.movie.renamer.$O=Pôvodný názov
+Settings.movie.renamer.$1=Prvé písmeno názvu
+Settings.movie.renamer.$E=Názov pre usporiadanie
+Settings.movie.renamer.$2=Prvé písmeno názvu pre usporiadanie
+Settings.movie.renamer.$Y=Rok
+Settings.movie.renamer.$M=Názov kolekcie filmov (názov pre usporiadanie)
+Settings.movie.renamer.$N=Názov kolekcie filmov
+Settings.movie.renamer.$I=IMDB číslo
+Settings.movie.renamer.$C=Certifikácia
+Settings.movie.renamer.$G=Prvý žáner
+Settings.movie.renamer.$L=Jazyk
+Settings.movie.renamer.$R=Rozlíšenie videa
+# Settings.movie.renamer.$A=audio code + channels
+# Settings.movie.renamer.$V=video code + format
+# Settings.movie.renamer.$F=video format
+# Settings.movie.renamer.$S=media source (DVD etc)
+# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+Settings.tvshow.renamer.$N=Názov seriálu
+Settings.tvshow.renamer.$Y=Rok
+Settings.tvshow.renamer.$T=Názov epizódy
+Settings.tvshow.renamer.$F=Formát videa
+Settings.tvshow.renamer.$1=Číslo sezóny
+Settings.tvshow.renamer.$2=Číslo sezóny s aspoň 2 číslicami
+Settings.tvshow.renamer.$E=Číslo epizódy
+Settings.tvshow.renamer.$R=Rozlíšenie videa
+Settings.tvshow.renamer.$A=Audio kodek + kanály
+Settings.tvshow.renamer.$V=Video kodek + formát
+Settings.tvshow.renamer.$F=Formát videa
+
 
 # tv show settings
 Settings.tvshowdatasource=Zdroje dát seriálov
 Settings.tvshowdatasource.folderchooser=Pridať zdroj dát seriálov
 Settings.tvshowdatasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky seriály a epizódy v tomto umiestnení budú odstránené z databázy TMM. Chcete pokračovať?
-Settings.tvshowseasontofilename=Pridať sezónu do názvu súboru
-Settings.tvshowtofilename=Pridať názov seriálu do názvu súboru
-Settings.tvshowepisodetofilename=Pridať názov epizódy do názvu súboru
+# Settings.dvdorder=Imported episodes are in DVD order
+
+Settings.tvshowfoldername=Názov priečinku seriálu
 Settings.tvshowseasonfoldername=Názov priečinku sezóny
-Settings.tvshowseasonhint=$1 - Číslo sezóny\n$2 - Číslo sezóny s aspoň dvoma číslicami\nMôžete vynechať vytvorenie zložky sezóny tým, že necháte toto pole prázdne. Zároveň musíte označiť \\"Pridať sezónu do názvu súboru\\"
-Settings.separator=Oddeľovač
-Settings.separator.hint=Oddeľovač medzi názvom a číslom sezóny/epizódy   
+Settings.tvshowfilename=Názov súboru epizódy
 Settings.tvshowspacereplacement.hint=Nahradiť medzery týmto znakom
 Settings.tvshow.certifactioncountry.hint=Tip\: aktuálne žiaden scraper nepodporuje certifikát z rôznych krajín.\nTheTVDB databáza vždy použije certifikát US\nAniDB neposkytuje certifikát
 
@@ -420,8 +460,12 @@ tvshow.synctrakt=Synchronizovať kolekciu seriálov s Trakt.tv
 tvshow.synctrakt.desc=Synchronizovať kolekciu seriálov s Trakt.tv
 tvshow.synctraktwatched=Synchronizovanie označenia 'Videné' s Trakt.tv
 tvshow.synctraktwatched.desc=Synchronizovanie označenia 'Videné' s Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=Stiahni metadáta epizódy
+tvshowepisode.scrape.withoutartwork=Stiahni metadáta epizódy (bez náhľadov)
 tvshowepisode.clone=klonovať epizódu
 tvshowepisode.remove=Odstrániť epizódu
 tvshowepisode.rewritenfo=Prepísať NFO označených epizód
@@ -438,6 +482,7 @@ trakt.clear.movies=Čistenie filmov Trakt.tv
 trakt.clear.tvshows=Čistenie seriálov Trakt.tv
 
 # metatags
+metatag.3d=3D
 metatag.actors=Herci
 metatag.aired=Odvysielané
 metatag.artwork=Artwork
@@ -453,6 +498,9 @@ metatag.dateadded=Dátum pridania
 metatag.details=Detaily
 metatag.details2=Detaily 2
 metatag.director=Réžia
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=Epizóda
 metatag.episodes=Epizódy
 metatag.external=externé
@@ -520,6 +568,7 @@ mediafiletype.video_extra=Video Extras
 mediafiletype.audio=Audio
 mediafiletype.subtitle=Titulky
 mediafiletype.nfo=NFO
+mediafiletype.text=Text
 mediafiletype.poster=Plagát
 mediafiletype.fanart=FanArt
 mediafiletype.banner=Banner
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = TV film
 Genres.THRILLER = Thriller
 Genres.WAR = Vojnový
 Genres.WESTERN = Western
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />Najväčšia voľná databáza udržiavaná komunitou. Poskytuje metadáta a artwork<br />v rôznych jazykoch.<br /><br />Dostupné jazyky\: viaceré</html>
+scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />Najpoužívanejšia databáza filmov z celého sveta..<br />Neobsahuje Obsah/Názov/Stručné info v každom jazyku. Môžete si vybrať, stiahnuť tieto texty z TMDB<br /><br />Dostupné jazyky\: viaceré</html>
+# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
+# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
+# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
+# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
