--- a/locale/messages_zh.properties
+++ b/locale/messages_zh.properties
@@ -14,6 +14,7 @@ Button.edit=编辑
 Button.register=注册
 Button.rename=重命名
 # Button.chooseplayer=Choose player
+# Button.update=Update
 
 menuitem.cut=剪切
 menuitem.copy=复制
@@ -59,7 +60,7 @@ tmm.nfo=NFO
 tmm.images=图片
 tmm.trailer=预告片
 tmm.subtitles=字幕
-tmm.update.title=检查升级
+# tmm.update.title=Check for update
 tmm.update.message=有新版本，要更新吗？
 tmm.registeredto=注册到：
 tmm.registerdonator=注册以获取捐赠版本
@@ -115,7 +116,7 @@ movie.scrape.toosimilar=电影片名非常相似－无法确定使用哪一个
 # movie.remove=Remove selected movie(s) (DB)
 # movie.delete=Delete selected movie(s) (DB + file)
 # movie.delete.hint=Delete selected movie(s) from tinyMediaManager DB and your data source\!
-# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source and deleted on exit of tinyMediaManager
+# movie.delete.desc=Delete selected movie(s) from tinyMediaManager DB and the data source?\nThe files will be temporary moved to a folder called .deletedByTMM inside the data source\nand deleted on exit of tinyMediaManager (if activated in settings)
 movie.rename=重命名或清理所选电影
 movie.renamepreview=重命名或清理所选电影－试运行
 movie.renamepreview.hint=生成预览，该电影必须重命名\n该功能仅捐赠者可以使用
@@ -187,6 +188,8 @@ scraper.artwork=图片刮削器
 scraper.trailer=预告片
 
 image.choose=选择一个图片
+# image.inserturl=Insert an url to an image here
+# image.downloadimage=Download image
 image.choose.file=选择文件
 image.choose.fanart=选择剧照
 image.choose.poster=选择海报
@@ -239,7 +242,7 @@ BugReport=发送错误报告
 BugReport.name=姓名
 BugReport.email=Email
 BugReport.email.description=请输入有效的电子邮件地址，以便于我们联系您获取更多信息。
-BugReport.description=描述
+# BugReport.description=Description (in English or German\!)
 BugReport.description.empty=未提供描述内容
 BugReport.attachments=附件
 BugReport.logs=日志
@@ -250,7 +253,7 @@ BugReport.send.ok=错误报告已发送
 Feedback=发送意见反馈
 Feedback.name=姓名（可选）
 Feedback.email=Email (可选)
-Feedback.message=意见反馈
+# Feedback.message=Feedback (in English or German\!)
 Feedback.message.empty=意见反馈内容为空
 Feedback.send.error=发送意见反馈是发生错误
 Feedback.send.ok=已发送意见反馈
@@ -294,6 +297,10 @@ Settings.shownotifications=显示提示信息
 # Settings.trakt.clearmovies.hint=ATTENTION\: This will remove all your movies and watched states from your Trakt.tv profile. Proceed?
 # Settings.trakt.cleartvshows=Remove TV shows from Trakt.tv
 # Settings.trakt.cleartvshows.hint=ATTENTION\: This will remove all your TV shows and watched states from your Trakt.tv profile. Proceed?
+# Settings.misc=Misc. settings
+# Settings.memoryborder=Memory settings
+# Settings.memory=Max. memory
+# Settings.memory.hint=Increase this value if you get OutOfMemoryError (Java heap space) or if you've got a large database and tinyMediaManager is running slow.\r\nBe aware\: this amount of memory has to be free whenever tinyMediaManager starts. Default 512MB\r\nChanging this value needs a restart of tinyMediaManager to take effect
 
 # image settings
 Settings.poster=海报和剧照
@@ -326,7 +333,8 @@ Settings.preferredLanguage=首选语言
 Settings.certificationCountry=分级标准
 Settings.scraperTreshold=相似度指数
 Settings.scraperTreshold.hint=这是一个判断搜索结果准确性的指数，刮削器将自动忽略低于设定指数的搜索结果。\n注意：指数设定过低将会导致搜索失败。
-Settings.default.autoscrape=自动刮削图片（不需手动选择）
+# Settings.default.autoscrape=Automatically scrape images (without selection)
+# Settings.default.autoscrape.language=Prefer language over resolution when choosing images
 Settings.automaticscraper=自动匹配
 Settings.scraperfallback=搜索无果时启用其他刮削器
 
@@ -350,6 +358,8 @@ Settings.sorting.info=选择排序时需要忽略的前缀。\n例如：The\n“
 Settings.renamer=重命名规则
 Settings.renamer.folder=文件夹
 Settings.renamer.file=文件
+# Settings.renamer.token=Token description
+# Settings.renamer.value=Value from the example
 Settings.renamer.asciireplacement=用ASCII字符替换对应的非ASCII字符
 Settings.renamer.asciireplacement.hint=例如：Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=文件清理选项
@@ -367,25 +377,55 @@ Settings.runtimefrommediafile=片长优先使用视频时长
 # Settings.trailer.source=Trailer source
 # Settings.trailer.quality=Trailer quality
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n$S \= media source (DVD etc)\r\n$3 \= 3D tag (3D SBS/TAB)\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
+# Settings.movie.renamer.title=Renamer pattern and options
+# Settings.movie.renamer.optional={} \= optional replacement\r\neg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\nif $Y is empty (or no $x replacement inside) the complete tag is empty
 Settings.movie.renamer.example=选择文件夹或文件重命名模板。\n如果未选择，将忽略重命名！
 Settings.movie.renamer.nomovie=至少需要一部电影作为实例
 Settings.movie.renamer.spacesubstitution=把空格替换为
 
-Settings.tvshow.renamer.info=ToDo
-Settings.tvshow.renamer.example=ToDo
+# Settings.movie.renamer.$T=Title
+# Settings.movie.renamer.$O=Original title
+# Settings.movie.renamer.$1=first letter of the title
+# Settings.movie.renamer.$E=Sort title
+# Settings.movie.renamer.$2=first letter of sort title
+# Settings.movie.renamer.$Y=Year
+# Settings.movie.renamer.$M=Movieset title (sort title)
+# Settings.movie.renamer.$N=Movieset title
+# Settings.movie.renamer.$I=IMDB number
+# Settings.movie.renamer.$C=Certification
+# Settings.movie.renamer.$G=First genre
+# Settings.movie.renamer.$L=Language
+# Settings.movie.renamer.$R=Video resolution
+# Settings.movie.renamer.$A=audio code + channels
+# Settings.movie.renamer.$V=video code + format
+# Settings.movie.renamer.$F=video format
+# Settings.movie.renamer.$S=media source (DVD etc)
+# Settings.movie.renamer.$3=3D tag (3D SBS/TAB)
+
+# Settings.tvshow.renamer.title=Renamer pattern and options
+
+# Settings.tvshow.renamer.$N=TV show name
+# Settings.tvshow.renamer.$Y=Year
+# Settings.tvshow.renamer.$T=Episode title
+# Settings.tvshow.renamer.$F=Video format
+# Settings.tvshow.renamer.$1=Season number
+# Settings.tvshow.renamer.$2=Season number with at least 2 digits
+# Settings.tvshow.renamer.$E=Episode number
+# Settings.tvshow.renamer.$R=Video resolution
+# Settings.tvshow.renamer.$A=audio code + channels
+# Settings.tvshow.renamer.$V=video code + format
+# Settings.tvshow.renamer.$F=Video format
+
 
 # tv show settings
 Settings.tvshowdatasource=目录
 Settings.tvshowdatasource.folderchooser=添加目录
 Settings.tvshowdatasource.remove.info=如果删除 % 目录，其中所有电视剧及其播出季都将从 TMM 数据库中删除。确定吗？
-Settings.tvshowseasontofilename=把播出季序号加入文件名
-Settings.tvshowtofilename=把电视剧片名加入文件名
-Settings.tvshowepisodetofilename=把分集片名加入文件名
-Settings.tvshowseasonfoldername=播出季文件夹名
-# Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits\nYou can omit creating the season folder by leaving this field blank.\nBut to use this, you have to check \\"add season to filename\\"
-Settings.separator=分隔符
-# Settings.separator.hint=Separator between title and season/episode number
+# Settings.dvdorder=Imported episodes are in DVD order
+
+# Settings.tvshowfoldername=TV show folder name
+# Settings.tvshowseasonfoldername=Season folder name
+# Settings.tvshowfilename=Episode file name
 # Settings.tvshowspacereplacement.hint=Replace spaces in title with this character
 Settings.tvshow.certifactioncountry.hint=提示：现在没有任何一个电影资料库同时支持不同国家的分级信息。\nThe TV Database 仅支持美国的分级信息。\nAniDB 不提供分级信息
 
@@ -420,8 +460,12 @@ tvshow.export=导出电视剧列表
 # tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
 # tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
 # tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+# tvshow.changetodvdorder=Change selected episode(s) to DVD order
+# tvshow.changefromdvdorder=Change selected episode(s) to aired order
+# tvshow.changeorder.desc=This should be used after import, before you scrape
 
 tvshowepisode.scrape=刮削播出季资料
+# tvshowepisode.scrape.withoutartwork=Scrape episode metadata (without thumbs)
 tvshowepisode.clone=克隆分集
 tvshowepisode.remove=删除分集
 tvshowepisode.rewritenfo=重建NFO文件 
@@ -438,6 +482,7 @@ tvshowepisode.setwatchedflag=设置已看标签
 # trakt.clear.tvshows=Clearing Trakt.tv TV show(s)
 
 # metatags
+# metatag.3d=3D
 metatag.actors=演员
 metatag.aired=播出时间
 metatag.artwork=图片
@@ -453,6 +498,9 @@ metatag.dateadded=添加日期
 metatag.details=电影资料
 metatag.details2=电影资料 2
 metatag.director=导演
+# metatag.dvdepisode=DVD episode
+# metatag.dvdorder=DVD ordering
+# metatag.dvdseason=DVD season
 metatag.episode=分集
 metatag.episodes=分集
 metatag.external=外置
@@ -520,6 +568,7 @@ mediafiletype.video_extra=视频截图
 mediafiletype.audio=音频
 mediafiletype.subtitle=字幕
 mediafiletype.nfo=NFO
+# mediafiletype.text=Text
 mediafiletype.poster=海报 
 mediafiletype.fanart=剧照
 mediafiletype.banner=宽幅海报
@@ -656,3 +705,12 @@ Genres.TV_MOVIE = 电视电影
 Genres.THRILLER = 惊悚
 Genres.WAR = 战争
 Genres.WESTERN = 西部
+
+####################################
+# Scraper hints. Since scraper will be loaded dynamically, the texts resist here for now
+# scraper.tmdb.hint=<html><h3>The Movie Database (TMDb)</h3><br />The largest free movie database maintained by the community. It provides metadata and artwork<br />in many different languages. Thus it is the first choice for non english users<br /><br />Available languages\: multiple</html>
+# scraper.imdb.hint=<html><h3>Internet Movie Database (IMDB)</h3><br />The most used database for movies all over the world.<br />Does not contain plot/title/tagline in every language. You may choose to download these texts from TMDB<br /><br />Available languages\: multiple</html>
+# scraper.ofdb.hint=<html><h3>Online Filmdatenbank (OFDb)</h3><br />A german movie database driven by the community.<br /><br />Available languages\: DE</html>
+# scraper.zelluloid.hint=<html><h3>Zelluloid.de</h3><br />A german movie database.<br /><br />Available languages\: DE</html>
+# scraper.moviemeter.hint=<html><h3>Moviemeter.nl</h3><br />A dutch movie database.<br /><br />Available languages\: NL</html>
+# scraper.rottentomatoes.hint=<html><h3>Rotten Tomatoes</h3><br />An american movie database.<br />Does not provide plot for older films via the API.<br /><br />Available languages\: EN</html>
